--- a/Ecat.DataLib/Ecat.DataLib.csproj
+++ b/Ecat.DataLib/Ecat.DataLib.csproj
@@ -57,29 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\SchoolSchemaConfig.cs" />
-    <Compile Include="Context\ContextSchool.cs" />
-    <Compile Include="Context\EcEfContext.cs" />
-    <Compile Include="Context\ContextBase.cs" />
-    <Compile Include="Context\ContextUser.cs" />
-    <Compile Include="MigrationSchoolContext\201701090145130_Init.cs" />
-    <Compile Include="MigrationSchoolContext\201701090145130_Init.Designer.cs">
-      <DependentUpon>201701090145130_Init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MigrationSchoolContext\201701090149258_CustomKeys.cs" />
-    <Compile Include="MigrationSchoolContext\201701090149258_CustomKeys.Designer.cs">
-      <DependentUpon>201701090149258_CustomKeys.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MigrationSchoolContext\SchoolCtxConfiguration.cs" />
-    <Compile Include="MigrationUserContext\201701071220465_Init.cs" />
-    <Compile Include="MigrationUserContext\201701071220465_Init.Designer.cs">
-      <DependentUpon>201701071220465_Init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MigrationUserContext\UserCtxConfiguration.cs" />
+    <Compile Include="Context\SchoolCtx.cs" />
+    <Compile Include="Context\BaseEfContext.cs" />
+    <Compile Include="Context\BaseCtx.cs" />
+    <Compile Include="Context\UserCtx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserContextMigrations\201701090232483_SmallChanges.cs" />
-    <Compile Include="UserContextMigrations\201701090232483_SmallChanges.Designer.cs">
-      <DependentUpon>201701090232483_SmallChanges.cs</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -92,19 +74,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="MigrationSchoolContext\201701090145130_Init.resx">
-      <DependentUpon>201701090145130_Init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MigrationSchoolContext\201701090149258_CustomKeys.resx">
-      <DependentUpon>201701090149258_CustomKeys.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MigrationUserContext\201701071220465_Init.resx">
-      <DependentUpon>201701071220465_Init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UserContextMigrations\201701090232483_SmallChanges.resx">
-      <DependentUpon>201701090232483_SmallChanges.cs</DependentUpon>
-    </EmbeddedResource>
+    <Folder Include="MSchCtx\" />
+    <Folder Include="MUsrCtx\" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
